knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_Account_Plan_User_Setting__c/pqcrush__pq_CRUSH_Account_Plan_User_Setting__c.object-meta.xml
<CustomObject>
    <label>CRUSH Account Plan User Setting</label>
    <nameField>
        <displayFormat>APUS-{0000}</displayFormat>
        <label>CRUSH Account Plan User Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRUSH Account Plan User Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>