knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_Account_Plan_User_Setting__c/fields/pqcrush__Account_Plan_RM_Sort__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Account_Plan_RM_Sort__c</fullName>
    <label>Account Plan RelationShip Maps Sort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreatedDate DESC</fullName>
                <label>Created: Newest to Oldest</label>
            </value>
            <value>
                <fullName>CreatedDate ASC</fullName>
                <default>true</default>
                <label>Created: Oldest to Newest</label>
            </value>
            <value>
                <fullName>Name ASC</fullName>
                <label>Name: Alphabetical</label>
            </value>
            <value>
                <fullName>Name DESC</fullName>
                <label>Name: Reverse Alphabetical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>