knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_Account_Plan_User_Setting__c/fields/pqcrush__Objective_Overview_Chart_Type__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Objective_Overview_Chart_Type__c</fullName>
    <label>Objective Overview Chart Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bar</fullName>
                <default>true</default>
                <label>Bar</label>
            </value>
            <value>
                <fullName>Pie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>